RESOLVED FIXED176387
[Win] Compile errors in pathByAppendingComponents.
https://bugs.webkit.org/show_bug.cgi?id=176387
Summary [Win] Compile errors in pathByAppendingComponents.
Per Arne Vollan
Reported 2017-09-05 11:26:17 PDT
C:\cygwin\home\buildbot\slave\win-release\build\Source\WebCore\platform\win\FileSystemWin.cpp(268): error C2440: 'initializing': cannot convert from 'WTF::StringView' to 'WTF::String' [C:\cygwin\home\buildbot\slave\win-release\build\WebKitBuild\Release\Source\WebCore\WebCore.vcxproj] C:\cygwin\home\buildbot\slave\win-release\build\Source\WebCore\platform\win\FileSystemWin.cpp(268): note: No constructor could take the source type, or constructor overload resolution was ambiguous C:\cygwin\home\buildbot\slave\win-release\build\Source\WebCore\platform\win\FileSystemWin.cpp(270): error C2664: 'WTF::String WebCore::pathByAppendingComponent(const WTF::String &,const WTF::String &)': cannot convert argument 2 from 'const WTF::StringView' to 'const WTF::String &' [C:\cygwin\home\buildbot\slave\win-release\build\WebKitBuild\Release\Source\WebCore\WebCore.vcxproj] C:\cygwin\home\buildbot\slave\win-release\build\Source\WebCore\platform\win\FileSystemWin.cpp(270): note: Reason: cannot convert from 'const WTF::StringView' to 'const WTF::String' C:\cygwin\home\buildbot\slave\win-release\build\Source\WebCore\platform\win\FileSystemWin.cpp(270): note: No user-defined-conversion operator available that can perform this conversion, or the operator cannot be called
Attachments
Patch (1.35 KB, patch)
2017-09-05 11:28 PDT, Per Arne Vollan
no flags
Per Arne Vollan
Comment 1 2017-09-05 11:28:05 PDT
Brent Fulgham
Comment 2 2017-09-05 11:30:41 PDT
Comment on attachment 319918 [details] Patch r=me.
Per Arne Vollan
Comment 3 2017-09-05 11:33:04 PDT
Comment on attachment 319918 [details] Patch Thanks for reviewing!
WebKit Commit Bot
Comment 4 2017-09-05 12:02:34 PDT
Comment on attachment 319918 [details] Patch Clearing flags on attachment: 319918 Committed r221628: <http://trac.webkit.org/changeset/221628>
WebKit Commit Bot
Comment 5 2017-09-05 12:02:35 PDT
All reviewed patches have been landed. Closing bug.
Chris Dumez
Comment 6 2017-09-05 12:06:27 PDT
Thanks for fixing!
Per Arne Vollan
Comment 7 2017-09-05 12:28:59 PDT
(In reply to Chris Dumez from comment #6) > Thanks for fixing! No problem :)
Radar WebKit Bug Importer
Comment 8 2017-09-27 12:35:51 PDT
Note You need to log in before you can comment on or make changes to this bug.