[Win] Compile errors in pathByAppendingComponents. https://bugs.webkit.org/show_bug.cgi?id=176387

Reviewed by Brent Fulgham.

The pathByAppendingComponents function has changed signature.

* platform/win/FileSystemWin.cpp:
(WebCore::pathByAppendingComponents):


Canonical link: https://commits.webkit.org/192998@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@221628 268f45cc-cd09-0410-ab3c-d52691b4dbfc